src/main/javacc/spl_prime.jj
options
{
    LOOKAHEAD=2;
    OUTPUT_DIRECTORY = "src/main/java/splprime/generated_scan";
}
PARSER_BEGIN(SPLPrime)
package splprime.generated_scan;
import splprime.ast_generated.*;
import java.util.List;
import java.util.ArrayList;

public class SPLPrime
{
      /** Main entry point. */
      public static void main(String args[]) throws ParseException {
        SPLPrime parser = new SPLPrime(System.in);
        parser.program();
      }
}
PARSER_END(SPLPrime)
SKIP :
{
    " "
|   "\n"
|   "\r"
|   "\r\n"
|   "\t"
|   < SINGLE_LINE_COMMENT : "//" (~["\n","\r"])* >
}
TOKEN :
{
    < NOT: "!" >
|   < PLUS: "+" >
|   < MINUS: "-" >
|   < STAR: "*" >
|   < DIVIDE: "/" >
|   < EQUAL: "=" >
|   < EQUAL_EQUAL: "==" >
|   < NOT_EQUAL: "!=" >
|   < GREATER: ">" >
|   < LESS: "<" >
|   < GREATER_EQUAL: ">=" >
|   < LESS_EQUAL: "<=" >

      // Special characters,
|   < LEFT_PAREN: "(" >
|   < RIGHT_PAREN: ")" >
|   < LEFT_BRACE: "{" >
|   < RIGHT_BRACE: "}" >
|   < SEMICOLON: ";" >

      // Keywords
|    < TRUE: "true" >
|    < FALSE: "false" >
|    < AND: "and" >
|    < OR: "or" >
|    < VAR: "var" >
|    < PRINT: "print" >
|    < IF: "if" >
|    < ELSE: "else" >
|    < WHILE: "while" >

      // Strings
|    < STRING: "\"" (~["\n", "\r", "\""])* "\"" >

      // Numbers
|   < NUMBER: (<DIGIT>)+ ( "." (<DIGIT>)+ )? >
|   < DIGIT: ["0"-"9"] >

      // Identifiers
|   < IDENTIFIER: (["a"-"z"])+ >
}

/** Top level production. */
List<Stmt> program() : { List<Stmt> stmts = new ArrayList<Stmt>(); Stmt s; }
{
    (s = declaration() { stmts.add(s); } )* <EOF> { return stmts; }
}

Stmt declaration() : { Stmt s; }
{
    s = varDecl() { return s; }
    | s = statement() { return s; }
}

Var varDecl() : { Expr e = null; splprime.generated_scan.Token name; }
{
    <VAR> name = <IDENTIFIER> (<EQUAL> e = expression())? <SEMICOLON>
    { return new Var(name, e); }
}

Stmt statement() : { Stmt s; }
{
    s = exprStmt() { return s; }
    | s = ifStmt() { return s; }
    | s = printStmt() { return s; }
    | s = whileStmt() { return s; }
    | s = block() { return s; }
}

ExprStmt exprStmt() : { Expr e; }
{
    e = expression() <SEMICOLON>
    { return new ExprStmt(e); }
}

IfStmt ifStmt() : {Expr e; Stmt then_stmt; Stmt else_stmt = null; }
{
    <IF> <LEFT_PAREN> e = expression() <RIGHT_PAREN>
    then_stmt = statement()
    (<ELSE> else_stmt = statement())?
    { return new IfStmt(e, then_stmt, else_stmt); }
}

PrintStmt printStmt() : { Expr e; }
{
    <PRINT> e = expression() <SEMICOLON>
    { return new PrintStmt(e); }
}

WhileStmt whileStmt() : { Expr e; Stmt s; }
{
    <WHILE> <LEFT_PAREN> e = expression() <RIGHT_PAREN> s = statement()
    { return new WhileStmt(e, s); }
}

Block block() : { List<Stmt> stmts = new ArrayList<Stmt>(); Stmt s; }
{
    <LEFT_BRACE>
    (
        s = declaration()
        { stmts.add(s); }
    )* <RIGHT_BRACE>
    { return new Block(stmts); }
}

Expr expression() : { Expr e; }
{
    e = assignment()
    { return e; }
}

Expr assignment() : { Expr e; splprime.generated_scan.Token name; }
{
    LOOKAHEAD(2) // Check if it's "ID ="
    name = <IDENTIFIER> <EQUAL> e = assignment() { return new Assign(name, e); }
    | e = logic_or() { return e; }
}

Expr logic_or() : { Expr left; Expr right; splprime.generated_scan.Token op; }
{
    left = logic_and()
    (
        op = <OR>
        right = logic_and()
        {left = new BinaryExpr(left, op, right); }
    )*
    { return left; }
}

Expr logic_and() : { Expr left; Expr right; splprime.generated_scan.Token op; }
{
    left = equality()
    (
        op = <AND>
        right = equality()
        {left = new BinaryExpr(left, op, right); }
    )*
    { return left; }
}

Expr equality() : { Expr left; Expr right; splprime.generated_scan.Token op; }
{
    left = comparison()
    (
        (op = <NOT_EQUAL> | op = <EQUAL_EQUAL> )
        right = comparison()
        {left = new BinaryExpr(left, op, right); }
    )*
    { return left; }
}

Expr comparison() : { Expr left; Expr right; splprime.generated_scan.Token op; }
{
    left = term()
    (
        (op = <GREATER> | op = <GREATER_EQUAL> | op = <LESS> | op = <LESS_EQUAL> )
        right = term()
        { left = new BinaryExpr(left, op, right); }
    )*
    { return left; }
}

Expr term() : { Expr left; Expr right; splprime.generated_scan.Token op; }
{
    left = factor()
    (
        (op = <PLUS> | op = <MINUS>)
        right = factor()
        { left = new BinaryExpr(left, op, right); }
    )*
    { return left; }
}

Expr factor() : { Expr left; Expr right; splprime.generated_scan.Token op; }
{
    left = unary()
    (
        (op = <DIVIDE> | op = <STAR> )
        right = unary()
        { left = new BinaryExpr(left, op, right); }
    )*
    { return left; }
}

Expr unary() : { splprime.generated_scan.Token t; Expr e; }
{
    (t = <NOT> | t = <MINUS> ) e = unary() { return new UnaryExpr(t, e); }
    | e = primary() { return e; }
}

Expr primary() : { splprime.generated_scan.Token t; Expr e; }
{
    t = <TRUE>       { return new Literal(t); }
  | t = <FALSE>      { return new Literal(t); }
  | t = <NUMBER>     { return new Literal(t); }
  | t = <STRING>     { return new Literal(t); }
  | <LEFT_PAREN> e = expression() <RIGHT_PAREN> { return new Grouping(e); }
  | t = <IDENTIFIER> { return new Variable(t); }
}
