src/main/java/splprime/generated_scan/SPLPrime.java
/* SPLPrime.java */
/* Generated By:JavaCC: Do not edit this line. SPLPrime.java */
package splprime.generated_scan;
import splprime.ast_generated.*;
import java.util.List;
import java.util.ArrayList;

public class SPLPrime implements SPLPrimeConstants {
      /** Main entry point. */
      public static void main(String args[]) throws ParseException {
        SPLPrime parser = new SPLPrime(System.in);
        parser.program();
      }

/** Top level production. */
  static final public List<Stmt> program() throws ParseException {List<Stmt> stmts = new ArrayList<Stmt>(); Stmt s;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      s = declaration();
stmts.add(s);
    }
    jj_consume_token(0);
{if ("" != null) return stmts;}
    throw new Error("Missing return statement in function");
}

  static final public Stmt declaration() throws ParseException {Stmt s;
    if (jj_2_2(2)) {
      s = varDecl();
{if ("" != null) return s;}
    } else if (jj_2_3(2)) {
      s = statement();
{if ("" != null) return s;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Var varDecl() throws ParseException {Expr e = null; splprime.generated_scan.Token name;
    jj_consume_token(VAR);
    name = jj_consume_token(IDENTIFIER);
    if (jj_2_4(2)) {
      jj_consume_token(EQUAL);
      e = expression();
    } else {
      ;
    }
    jj_consume_token(SEMICOLON);
{if ("" != null) return new Var(name, e);}
    throw new Error("Missing return statement in function");
}

  static final public Stmt statement() throws ParseException {Stmt s;
    if (jj_2_5(2)) {
      s = exprStmt();
{if ("" != null) return s;}
    } else if (jj_2_6(2)) {
      s = ifStmt();
{if ("" != null) return s;}
    } else if (jj_2_7(2)) {
      s = printStmt();
{if ("" != null) return s;}
    } else if (jj_2_8(2)) {
      s = whileStmt();
{if ("" != null) return s;}
    } else if (jj_2_9(2)) {
      s = block();
{if ("" != null) return s;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public ExprStmt exprStmt() throws ParseException {Expr e;
    e = expression();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new ExprStmt(e);}
    throw new Error("Missing return statement in function");
}

  static final public IfStmt ifStmt() throws ParseException {Expr e; Stmt then_stmt; Stmt else_stmt = null;
    jj_consume_token(IF);
    jj_consume_token(LEFT_PAREN);
    e = expression();
    jj_consume_token(RIGHT_PAREN);
    then_stmt = statement();
    if (jj_2_10(2)) {
      jj_consume_token(ELSE);
      else_stmt = statement();
    } else {
      ;
    }
{if ("" != null) return new IfStmt(e, then_stmt, else_stmt);}
    throw new Error("Missing return statement in function");
}

  static final public PrintStmt printStmt() throws ParseException {Expr e;
    jj_consume_token(PRINT);
    e = expression();
    jj_consume_token(SEMICOLON);
{if ("" != null) return new PrintStmt(e);}
    throw new Error("Missing return statement in function");
}

  static final public WhileStmt whileStmt() throws ParseException {Expr e; Stmt s;
    jj_consume_token(WHILE);
    jj_consume_token(LEFT_PAREN);
    e = expression();
    jj_consume_token(RIGHT_PAREN);
    s = statement();
{if ("" != null) return new WhileStmt(e, s);}
    throw new Error("Missing return statement in function");
}

  static final public Block block() throws ParseException {List<Stmt> stmts = new ArrayList<Stmt>(); Stmt s;
    jj_consume_token(LEFT_BRACE);
    label_2:
    while (true) {
      if (jj_2_11(2)) {
        ;
      } else {
        break label_2;
      }
      s = declaration();
stmts.add(s);
    }
    jj_consume_token(RIGHT_BRACE);
{if ("" != null) return new Block(stmts);}
    throw new Error("Missing return statement in function");
}

  static final public Expr expression() throws ParseException {Expr e;
    e = assignment();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Expr assignment() throws ParseException {Expr e; splprime.generated_scan.Token name;
    if (jj_2_12(2)) {
      // Check if it's "ID ="
          name = jj_consume_token(IDENTIFIER);
      jj_consume_token(EQUAL);
      e = assignment();
{if ("" != null) return new Assign(name, e);}
    } else if (jj_2_13(2)) {
      e = logic_or();
{if ("" != null) return e;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Expr logic_or() throws ParseException {Expr left; Expr right; splprime.generated_scan.Token op;
    left = logic_and();
    label_3:
    while (true) {
      if (jj_2_14(2)) {
        ;
      } else {
        break label_3;
      }
      op = jj_consume_token(OR);
      right = logic_and();
left = new BinaryExpr(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr logic_and() throws ParseException {Expr left; Expr right; splprime.generated_scan.Token op;
    left = equality();
    label_4:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_4;
      }
      op = jj_consume_token(AND);
      right = equality();
left = new BinaryExpr(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr equality() throws ParseException {Expr left; Expr right; splprime.generated_scan.Token op;
    left = comparison();
    label_5:
    while (true) {
      if (jj_2_16(2)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_17(2)) {
        op = jj_consume_token(NOT_EQUAL);
      } else if (jj_2_18(2)) {
        op = jj_consume_token(EQUAL_EQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = comparison();
left = new BinaryExpr(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr comparison() throws ParseException {Expr left; Expr right; splprime.generated_scan.Token op;
    left = term();
    label_6:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_20(2)) {
        op = jj_consume_token(GREATER);
      } else if (jj_2_21(2)) {
        op = jj_consume_token(GREATER_EQUAL);
      } else if (jj_2_22(2)) {
        op = jj_consume_token(LESS);
      } else if (jj_2_23(2)) {
        op = jj_consume_token(LESS_EQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = term();
left = new BinaryExpr(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr term() throws ParseException {Expr left; Expr right; splprime.generated_scan.Token op;
    left = factor();
    label_7:
    while (true) {
      if (jj_2_24(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_25(2)) {
        op = jj_consume_token(PLUS);
      } else if (jj_2_26(2)) {
        op = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = factor();
left = new BinaryExpr(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr factor() throws ParseException {Expr left; Expr right; splprime.generated_scan.Token op;
    left = unary();
    label_8:
    while (true) {
      if (jj_2_27(2)) {
        ;
      } else {
        break label_8;
      }
      if (jj_2_28(2)) {
        op = jj_consume_token(DIVIDE);
      } else if (jj_2_29(2)) {
        op = jj_consume_token(STAR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = unary();
left = new BinaryExpr(left, op, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
}

  static final public Expr unary() throws ParseException {splprime.generated_scan.Token t; Expr e;
    if (jj_2_32(2)) {
      if (jj_2_30(2)) {
        t = jj_consume_token(NOT);
      } else if (jj_2_31(2)) {
        t = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      e = unary();
{if ("" != null) return new UnaryExpr(t, e);}
    } else if (jj_2_33(2)) {
      e = primary();
{if ("" != null) return e;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Expr primary() throws ParseException {splprime.generated_scan.Token t; Expr e;
    if (jj_2_34(2)) {
      t = jj_consume_token(TRUE);
{if ("" != null) return new Literal(t);}
    } else if (jj_2_35(2)) {
      t = jj_consume_token(FALSE);
{if ("" != null) return new Literal(t);}
    } else if (jj_2_36(2)) {
      t = jj_consume_token(NUMBER);
{if ("" != null) return new Literal(t);}
    } else if (jj_2_37(2)) {
      t = jj_consume_token(STRING);
{if ("" != null) return new Literal(t);}
    } else if (jj_2_38(2)) {
      jj_consume_token(LEFT_PAREN);
      e = expression();
      jj_consume_token(RIGHT_PAREN);
{if ("" != null) return new Grouping(e);}
    } else if (jj_2_39(2)) {
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Variable(t);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_38()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_39()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_3R_varDecl_88_5_10()
 {
    if (jj_scan_token(VAR)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_17()
 {
    if (jj_scan_token(NOT_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_3R_statement_94_5_11()) return true;
    return false;
  }

  static private boolean jj_3_16()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) return true;
    }
    if (jj_3R_comparison_185_5_21()) return true;
    return false;
  }

  static private boolean jj_3R_declaration_82_5_9()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) return true;
    }
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_varDecl_88_5_10()) return true;
    return false;
  }

  static private boolean jj_3R_equality_174_5_20()
 {
    if (jj_3R_comparison_185_5_21()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_16()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_declaration_82_5_9()) return true;
    return false;
  }

  static private boolean jj_3_15()
 {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_equality_174_5_20()) return true;
    return false;
  }

  static private boolean jj_3R_logic_and_163_5_19()
 {
    if (jj_3R_equality_174_5_20()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_15()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_14()
 {
    if (jj_scan_token(OR)) return true;
    if (jj_3R_logic_and_163_5_19()) return true;
    return false;
  }

  static private boolean jj_3R_logic_or_152_5_18()
 {
    if (jj_3R_logic_and_163_5_19()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_14()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_23()
 {
    if (jj_scan_token(LESS_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3_13()
 {
    if (jj_3R_logic_or_152_5_18()) return true;
    return false;
  }

  static private boolean jj_3R_assignment_145_5_26()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) return true;
    }
    return false;
  }

  static private boolean jj_3_12()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(EQUAL)) return true;
    return false;
  }

  static private boolean jj_3R_expression_139_5_12()
 {
    if (jj_3R_assignment_145_5_26()) return true;
    return false;
  }

  static private boolean jj_3_22()
 {
    if (jj_scan_token(LESS)) return true;
    return false;
  }

  static private boolean jj_3_31()
 {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_29()
 {
    if (jj_scan_token(STAR)) return true;
    return false;
  }

  static private boolean jj_3_11()
 {
    if (jj_3R_declaration_82_5_9()) return true;
    return false;
  }

  static private boolean jj_3_39()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_38()
 {
    if (jj_scan_token(LEFT_PAREN)) return true;
    if (jj_3R_expression_139_5_12()) return true;
    return false;
  }

  static private boolean jj_3_37()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3_36()
 {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  static private boolean jj_3_35()
 {
    if (jj_scan_token(FALSE)) return true;
    return false;
  }

  static private boolean jj_3R_primary_224_5_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) {
    jj_scanpos = xsp;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_block_129_5_17()
 {
    if (jj_scan_token(LEFT_BRACE)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_11()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(RIGHT_BRACE)) return true;
    return false;
  }

  static private boolean jj_3_34()
 {
    if (jj_scan_token(TRUE)) return true;
    return false;
  }

  static private boolean jj_3_33()
 {
    if (jj_3R_primary_224_5_25()) return true;
    return false;
  }

  static private boolean jj_3_30()
 {
    if (jj_scan_token(NOT)) return true;
    return false;
  }

  static private boolean jj_3R_unary_218_5_24()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) return true;
    }
    return false;
  }

  static private boolean jj_3R_whileStmt_123_5_16()
 {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(LEFT_PAREN)) return true;
    return false;
  }

  static private boolean jj_3_32()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) return true;
    }
    if (jj_3R_unary_218_5_24()) return true;
    return false;
  }

  static private boolean jj_3_26()
 {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_28()
 {
    if (jj_scan_token(DIVIDE)) return true;
    return false;
  }

  static private boolean jj_3_27()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) return true;
    }
    if (jj_3R_unary_218_5_24()) return true;
    return false;
  }

  static private boolean jj_3R_printStmt_117_5_15()
 {
    if (jj_scan_token(PRINT)) return true;
    if (jj_3R_expression_139_5_12()) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_scan_token(EQUAL)) return true;
    if (jj_3R_expression_139_5_12()) return true;
    return false;
  }

  static private boolean jj_3_21()
 {
    if (jj_scan_token(GREATER_EQUAL)) return true;
    return false;
  }

  static private boolean jj_3R_factor_207_5_23()
 {
    if (jj_3R_unary_218_5_24()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_27()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_10()
 {
    if (jj_scan_token(ELSE)) return true;
    if (jj_3R_statement_94_5_11()) return true;
    return false;
  }

  static private boolean jj_3R_ifStmt_109_5_14()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(LEFT_PAREN)) return true;
    return false;
  }

  static private boolean jj_3_25()
 {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  static private boolean jj_3_24()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    }
    if (jj_3R_factor_207_5_23()) return true;
    return false;
  }
